# glfw-cmake-boilerplate

./: CMakeLists.txt  README.md
TestProject/: CMakeLists.txt  TestProject.cpp
src/: main.cpp
src/Application/: Application.cpp  Application.hpp
wip/: Game.cpp  Game.hpp
